project( heeks2 )
cmake_minimum_required( VERSION 2.6 )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/heeks2.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/About.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/App.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ContextTool.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/DigitizeMode.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Drawing.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/EllipseDrawing.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/FilterDlg.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Frame.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Gear.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/GraphicsCanvas.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HDialog.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HeeksConfig.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HeeksFont.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HeeksObjDlg.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HImage.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/InputMode.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/InputModeCanvas.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Key.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/LeftAndRight.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/LineArcDrawing.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Mf3.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Mouse.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/NiceTextCtrl.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Object.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ObjPropsCanvas.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PictureFrame.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PointDrawing.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Printout.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PropertiesCanvas.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/RefreshObserver.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Ribbon.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SelectMode.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SolidApp.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Svg.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ToolBarTool.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ToolImage.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Transform.py" DESTINATION "heeks2" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/TreeCanvas.py" DESTINATION "heeks2" )

add_subdirectory( CAD )
