project( cad )
cmake_minimum_required( VERSION 2.6 )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/heeks2cad.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/About.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/App.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ContextTool.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/DigitizeMode.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Drawing.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/EllipseDrawing.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/FilterDlg.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Frame.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Gear.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/GraphicsCanvas.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HDialog.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HeeksConfig.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HeeksFont.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HeeksObjDlg.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/HImage.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/InputMode.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/InputModeCanvas.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Key.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/LeftAndRight.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/LineArcDrawing.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Mf3.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Mouse.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/NiceTextCtrl.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Object.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ObjPropsCanvas.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PictureFrame.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PointDrawing.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Printout.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/PropertiesCanvas.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/RefreshObserver.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Ribbon.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SelectMode.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/SolidApp.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Svg.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ToolBarTool.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/ToolImage.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/Transform.py" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/TreeCanvas.py" DESTINATION "PyCAD" )
install( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bitmaps" DESTINATION "PyCAD" )
install( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/icons" DESTINATION "PyCAD" )
install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/heekscad.png" DESTINATION "PyCAD" )
add_subdirectory( CAD )
add_subdirectory( Geom )
add_subdirectory( Step )
